--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.fragment.app.FragmentContainerView
+            <fragment
                 android:id="@+id/myNavHostFragment"
                 app:navGraph="@navigation/navigation"
                 app:defaultNavHost = "true"
@@ -31,5 +36,7 @@
                 android:layout_height="match_parent"
                 />
         </LinearLayout>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
